Fix footer del horizontal scroll

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -248,3 +248,57 @@ a
                 color: $black
                 background-color: $yellow
                 text-decoration: none
+@media screen and ( max-width: 420px )
+    .gallery
+        justify-content: center
+    .social
+        flex-direction: column
+        h3
+            text-align: center
+    .social-networks
+        width: 100%
+    .follow-us
+        margin-bottom: 15px
+    .footer-menu
+        width: 80%
+        flex-wrap: wrap
+@media screen and ( max-width: 576px )   
+    .social
+        flex-direction: column
+        h3
+            text-align: center
+    .social-networks
+        width: 100%
+        margin-left: 80px
+        margin-top: 10px
+    .follow-us
+        margin-bottom: 15px
+    .black
+        .container
+            justify-content: center
+@media screen and ( max-width: 768px )
+    .social
+        flex-direction: column
+        span
+            text-align: center
+    .social-networks
+        width: 100%
+        margin-left: 80px
+        margin-top: 10px
+    .follow-us
+        margin: 0 auto
+    .black
+        .container
+            justify-content: center
+@media screen and ( max-width: 992px )
+    .social   
+        flex-direction: column 
+    .social-networks
+        width: 100%
+        margin-top: 10px
+    .email
+        margin-top: 3px
+        width: 75%
+    .black
+        .container
+            flex-wrap: wrap
